--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -70,7 +70,7 @@ ul li.checked::before {
 
 /* Style the header */
 .header {
-  background-color:  #8a8a8a;
+  background-color: #85d6d6;
   padding: 30px 40px;
   color: white;
   text-align: center;
