--- a/views/secondPage.handlebars
+++ b/views/secondPage.handlebars
@@ -20,42 +20,42 @@ a {text-align: center;}
 
 <body>
 
+  <form id="addTask" role="form" method="get" action="/added">
+
     <div id="myDIV" style="text-align:center" class="header">
-        <input type="text" id="myInput" placeholder="Enter Task Here...">
+        <input type="text"  name="taskName" placeholder="Enter Task Here...">
         <p style="text-align:left"><br /><br /><br />0/60 Characters</p>
-      </div>
+    </div>
 
 
-      <div class="slidecontainer">
+    <div class="slidecontainer">
   
-        <h3 >How Important Is It?</h3>
-        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-        <p style="text-align:left;">
-            Not Important
-            <span style="float:right;">
-            Very Important</span>
-            </p>
-      </div>
+      <h3 >How Important Is It?</h3>
+      <input type="range" min="1" max="100" value="50" class="slider"  name="imRange">
+      <p style="text-align:left;">
+        Not Important
+        <span style="float:right;">
+        Very Important</span>
+      </p>
+    </div>
 
-      <div class="slidecontainer">
+    <div class="slidecontainer">
       <h3 >How Urgent Is It?</h3>
-      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-        <p style="text-align:left;">
+      <input type="range" min="1" max="100" value="50" class="slider"  name="urRange">
+      <p style="text-align:left;">
         Not Urgent
         <span style="float:right;">
         Very Urgent</span>
-        </p>
-        </div>
-
-        <div style="text-align:center">    
-            <a href="FirstPage.html" class="btn btn-secondary btn-lg active" role="button" >Add New Task</a>
+      </p>
+    </div>
+  
+    <input type="submit" id="submitBtn" class="btn btn-default btn-lg active" value="Add New Task" style="text-align:center"></input>
             <!-- more links here -->
-          </div>
+  </form>
 
-
-<form>
- <input type="button" value="Go back!" onclick="history.back()">
-</form>
+  <form>
+    <input type="button" value="Go back!" onclick="history.back()">
+  </form>
 
           
     
