--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,22 +5,16 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="css/stylesheet.css" rel="stylesheet">
     <script src="js/javascript.js"></script>
+    {{> facebook}}
+	<script src="/js/facebook.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <body style="background-color: #cdf3f3;">
 	<div class="loginbox">
-	<img src="images/user.png" class="avatar">
-	<h1>Login</h1>
-	<form>
-		<p>Username</p>
-		<input type="text" name="" placeholder="Enter Username">
-		<p>Password</p>
-		<input type="password" name="" placeholder="Enter Password">
-		<a href="login" class="btn btn-info" role="button" >Login</a><br>
-		<a href="#">Lost your password?</a><br>
-		<a href="#">Don't have an account?</a>
-
-	</form>
+		<img src="images/user.png" class="avatar">
+		<h1>Login</h1>
+		<fb:login-button style=scope="public_profile" onlogin="checkLoginState();">
+		</fb:login-button>
 	</div>
 
 </body>
