--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,6 +15,18 @@
 		<h1>Login</h1>
 		<fb:login-button style=scope="public_profile" onlogin="checkLoginState();">
 		</fb:login-button>
+	<form>
+		<p>Username</p>
+		<input type="text" name="" placeholder="Enter Username">
+		<p>Password</p>
+		<input type="password" name="" placeholder="Enter Password">
+		<a href="login" class="btn btn-info" role="button" >Login</a><br>
+		<a href="#">Lost your password?</a><br>
+		<a href="#">Don't have an account?</a>
+
+	</form>
+
+
 	</div>
 
 </body>
