--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,9 +6,10 @@
     <link href="css/stylesheet.css" rel="stylesheet">
     <script src="js/javascript.js"></script>
     {{> facebook}}
-	<script src="/js/facebook.js"></script>
+	<script src="js/facebook.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
 <body style="background-color: #cdf3f3;">
 	<div class="loginbox">
 		<img src="images/user.png" class="avatar">
